--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <section id="portfolio">
     <h2>My Portfolio</h2>
     <p>Here you’ll find my projects, skills, and contact info. This section showcases work samples.</p>
+     <a href="project.html">
     <button>View Projects</button>
   </section>
 
