--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Rudranil Debnath. All rights reserved.</p>
+    <p>© 2025 rudr4n1l. All rights reserved.</p>
   </footer>
 </body>
 </html>
