--- a/index.html
+++ b/index.html
@@ -3,33 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Demo Site</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>DOOARS WELFARE FOUNDATION</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+
   <header>
-    <h1>Welcome to My Demo Site</h1>
-    <nav>
-      <a href="#food">Food Delivery</a>
-      <a href="#portfolio">Portfolio</a>
-    </nav>
+    <div class="container">
+      <h1>DOOARS WELFARE FOUNDATION</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="donate.html">Donate</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <section id="food">
-    <h2>Food Delivery</h2>
-    <p>This is a demo of a food delivery service site. You can browse meals, place orders, and track deliveries.</p>
-    <button>Order Now</button>
+  <section class="hero">
+    <div class="container">
+      <h2>Empowering Communities. Creating Change.</h2>
+      <p>We are a non-profit organization committed to making a difference through sustainable development, education, and humanitarian aid.</p>
+      <a href="donate.html" class="btn">Donate Now</a>
+    </div>
   </section>
 
-  <section id="portfolio">
-    <h2>My Portfolio</h2>
-    <p>Here you’ll find my projects, skills, and contact info. This section showcases work samples.</p>
-     <a href="project.html">
-    <button>View Projects</button>
+  <section class="mission">
+    <div class="container">
+      <h3>Our Mission</h3>
+      <p>Our mission is to uplift underprivileged communities by providing access to education, clean water, and essential healthcare. We believe in a world where everyone has the opportunity to thrive.</p>
+    </div>
+  </section>
+
+  <section class="call-to-action">
+    <div class="container">
+      <h3>Want to Help?</h3>
+      <p>Join us in creating lasting impact. Become a volunteer or make a donation to support our ongoing projects.</p>
+      <a href="contact.html" class="btn">Get Involved</a>
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 rudr4n1l. All rights reserved.</p>
+    <div class="container">
+      <p>© 2025 DOOARS WELFARE FOUNDATION. All rights reserved.</p>
+    </div>
   </footer>
+
 </body>
 </html>
