--- a/project.html
+++ b/project.html
@@ -3,46 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Project Showcase</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Projects - DOOARS WELFARE FOUNDATION</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <h1>Project Showcase</h1>
-    <p>A demonstration of various web development projects</p>
-    <nav>
-      <a href="index.html">Home</a>
-    </nav>
+    <div class="container">
+      <h1>DOOARS WELFARE FOUNDATION</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html" class="active">Projects</a></li>
+          <li><a href="donate.html">Donate</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main style="padding: 40px 20px;">
-    <p>This page highlights a range of fictional web development projects designed to demonstrate layout, styling, and interactivity. Each project is crafted to reflect different technical approaches, from static designs to dynamic interactions.</p>
-
-    <p>The goal of this showcase is to present examples of structured HTML, clean CSS, and well-organized content. Each section below represents a sample project with descriptive placeholder content. These projects are not real but reflect common patterns used in portfolios and development case studies.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sagittis, lacus nec imperdiet convallis, enim nisi tincidunt velit, sed sodales erat diam eget justo. Mauris lacinia nulla sed nulla tempor, a ullamcorper sem fermentum.</p>
-
-    <p>Project Alpha is a concept for a responsive blog layout featuring animated transitions, dark mode support, and custom typography. The homepage features a grid of articles, while individual posts include code snippets and image galleries.</p>
-
-    <p>Project Beta is an e-commerce template designed with mobile-first principles. It includes a product listing grid, item detail pages, and a mock cart system. Styling relies on CSS Grid, Flexbox, and utility classes for layout responsiveness.</p>
-
-    <p>Project Gamma focuses on form interactions and validation. It simulates a sign-up page with inline validation, accessibility considerations, and responsive form controls. This example highlights form usability, clarity, and structure.</p>
-
-    <p>Additional demo content includes navigation menus, footer sections, and styled components that maintain visual balance across devices. The page follows semantic HTML structure and encourages scalable, readable CSS practices.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum ipsum eget justo convallis, at luctus justo eleifend. Nam suscipit metus eu justo accumsan, in lobortis eros facilisis. Integer eu sapien eu mi egestas dapibus. Nulla facilisi.</p>
-
-    <p>Donec congue imperdiet tortor, ut sollicitudin sapien viverra in. Phasellus placerat arcu sed lacus posuere, at convallis nunc tincidunt. Suspendisse potenti. Sed tempor vestibulum lorem, non interdum mi varius in. Curabitur vel urna sit amet neque tempor rhoncus. Quisque vel blandit nulla.</p>
-
-    <p>Nam fringilla elit nec nulla lacinia laoreet. Nullam vehicula, justo sit amet gravida porttitor, neque urna congue turpis, in scelerisque sem turpis vitae est. Sed ac lacinia justo, et vestibulum mauris. Curabitur commodo neque et sollicitudin euismod.</p>
-
-    <p>Sed varius ex et tincidunt vulputate. Fusce dignissim leo in dignissim posuere. Aenean nec diam ac velit scelerisque finibus. Ut fermentum nisl in lacus feugiat, in luctus felis consequat. In id sapien ligula. Suspendisse ac diam non magna mattis vestibulum vel non ante.</p>
-
-    <p style="margin-top: 80px;">All projects shown here are fictional. This page is intended as a layout test and demo only.</p>
-  </main>
+  <section class="projects">
+    <div class="container">
+      <h2>Our Projects</h2>
+      <ul>
+        <li><strong>Project Udaan:</strong> A scholarship initiative for tribal children in the Dooars region.</li>
+        <li><strong>Health on Wheels:</strong> Mobile clinics reaching remote villages with basic healthcare.</li>
+        <li><strong>SkillConnect:</strong> Vocational training in tailoring, carpentry, and agriculture for rural youth.</li>
+        <li><strong>Green Villages:</strong> A tree plantation and clean water initiative.</li>
+        <li><strong>Women First:</strong> Micro-loans and financial literacy for women-led households.</li>
+      </ul>
+    </div>
+  </section>
 
   <footer>
-    <p>© 2025 Demo Portfolio. All rights reserved.</p>
+    <div class="container">
+      <p>© 2025 DOOARS WELFARE FOUNDATION. All rights reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
