--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       <ul>
         <li><strong>Email:</strong> contact@dooarsfoundation.org</li>
         <li><strong>Phone:</strong> +91-9876543210</li>
-        <li><strong>Address:</strong> 123 Dooars Road, Jalpaiguri, West Bengal, India</li>
+        <li><strong>Address:</strong> 123 Dooars Road, Alipurduar, West Bengal, India</li>
       </ul>
 
       <form>
