--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Donate - DOOARS WELFARE FOUNDATION</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <style>
     /* Extra styling for payment form */
     .payment-box {
